--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -117,6 +117,6 @@
     @apply border-border outline-ring/50;
   }
   body {
-    @apply bg-background text-foreground;
+    @apply dark:bg-black bg-white text-foreground;
   }
 }
